# pipeline_etl_weather_data

./: .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml
dags/: weather_dag.py
notebooks/: analisys_data.ipynb
src/: extract_data.py  load_data_weather.py  transform_data.py
src/tests/: test_extract_data.py
