[project]
name = "etl-data-weather"
version = "0.1.0"
description = "Pipeline ETL completo com Airflow, Python e PostgreSQL que coleta dados meteorológicos de São Paulo, aplica transformações e persiste em banco de dados. Containerizado com Docker."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apache-airflow>=3.1.8",
    "pandas>=3.0.1",
    "psycopg2-binary>=2.9.11",
    "pytest>=9.0.3",
    "python-dotenv>=1.2.2",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.48",
]
